--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage ": "https://Andrii-Podunai.github.io/weather-task",
+  "homepage ": "https://andrii-Podunai.github.io/weather-task",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
